Made it so, when u click a match, you will get to a new page to see that page

--- a/src/Css/App.css
+++ b/src/Css/App.css
@@ -2,6 +2,10 @@
     display: flex;
 }
 
+body {
+    background-color: #21212d;
+}
+
 .content {
     margin-left: 220px; /* For at give plads til MenuBar */
     padding: 20px;
