Made som changes to the matches tap

--- a/src/Css/Matches.css
+++ b/src/Css/Matches.css
@@ -8,6 +8,8 @@
     width: auto; /* Fyld hele skærmen */
     height: auto;
     box-sizing: border-box; /* Sørg for padding og border er inkluderet i bredden */
+    margin-bottom: 350px; /* Tilføjet margen nederst */
+    margin-left: 25px;
 }
 
     .matches h2 {
