Okay now the player stats are fixed and are working, So now should all sites only show data for the logged in user

--- a/src/Css/PlayerStats.css
+++ b/src/Css/PlayerStats.css
@@ -75,6 +75,10 @@ body {
     margin-bottom: 20px;
 }
 
+.NoDataFound{
+    color: blueviolet;
+}
+
 .stat-button {
     background-color: #3E3E55;
     color: white;
