--- a/src/Css/PlayerMapStats.css
+++ b/src/Css/PlayerMapStats.css
@@ -42,3 +42,10 @@ body {
     height: 57.79px;
     width: 44px;
 }
+
+.profile-picture {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    margin-bottom: 10px;
+}
