Started on the settings tap

--- a/src/Css/index.css
+++ b/src/Css/index.css
@@ -44,7 +44,7 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+/*  background-color: #1a1a1a;*/
   cursor: pointer;
   transition: border-color 0.25s;
 }
@@ -58,13 +58,13 @@ button:focus-visible {
 
 @media (prefers-color-scheme: light) {
   :root {
-    color: #213547;
+/*    color: #213547;*/
     background-color: #ffffff;
   }
   a:hover {
     color: #747bff;
   }
-  button {
+/*  button {
     background-color: #f9f9f9;
-  }
+  }*/
 }
