--- a/src/Css/ProfileMenu.css
+++ b/src/Css/ProfileMenu.css
@@ -3,6 +3,11 @@
 	top: 20px;
 	right: 20px;
 	color: #fff;
+	background-color: rgba(255, 255, 255, 0.1);
+	padding: 4px;
+	border-radius: 20px;
+	margin: 0 auto;
+	z-index: 1;
 }
 
 .profile-summary {
@@ -25,14 +30,16 @@
 .dropdown {
 	position: absolute;
 	top: 5px;
-	right: 5px;
+	right: 0px;
 	background-color: #333;
 	border: 1px solid #444;
-	border-radius: 5px;
+	border-radius: 10px;
 	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 	z-index: 1;
 	min-width: 150px;
 	overflow: hidden;
+	padding: 4px;
+	margin: 1px;
 }
 
 	.dropdown button {
