--- a/src/Css/App.css
+++ b/src/Css/App.css
@@ -7,7 +7,8 @@ body {
 }
 
 .content {
-    margin-left: 240px; /* For at give plads til MenuBar */
+    margin-left: 320px; /* For at give plads til MenuBar */
     padding: 20px;
     width: 100%;
+    align-content: center;
 }
