--- a/src/Css/FrontPage.css
+++ b/src/Css/FrontPage.css
@@ -1,6 +1,8 @@
 .homepage {
     text-align: center;
-    padding: 20px;
+    margin: 0 auto;
+    position: absolute;
+    top: 0px;
 }
 
 .topbar {
