--- a/src/Css/HomePage.css
+++ b/src/Css/HomePage.css
@@ -6,8 +6,14 @@
 
 }
 
-header {
+.homepage {
+    text-align: center;
+    margin: 0 auto;
+    position: absolute;
+    top: 0px;
+}
 
+header {
     display: flex;
     justify-content: space-between;
     align-items: center;
