--- a/src/Css/FrontPage.css
+++ b/src/Css/FrontPage.css
@@ -1,7 +1,7 @@
 * {
-    box-sizing: border-box;
+/*    box-sizing: border-box;
     margin: 0;
-    padding: 0;
+    padding: 0;*/
     /*background-color: rebeccapurple;*/
 
 }
