--- a/src/Css/index.css
+++ b/src/Css/index.css
@@ -1,73 +1,49 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+    /* box-sizing: border-box; */
+    /* margin: 0; */
+    /* padding: 0; */
+    /* background-color: rebeccapurple; */
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 30px 10%;
 }
 
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+.navbar {
+    background-color: red;
+    padding: 10px 50px;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-  color: white;
+.navbar-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-/*  background-color: #1a1a1a;*/
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+.NavLogo img {
+    height: 50px; /* Juster størrelsen på logoet efter behov */
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-/*    color: #213547;*/
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-/*  button {
-    background-color: #f9f9f9;
-  }*/
+.navbar-list {
+    list-style-type: none; /* Fjern punkterne foran list items */
+    display: flex; /* Gør listen vandret */
+    margin: 0;
+    padding: 0;
 }
+
+    .navbar-list li {
+        margin-left: 30px; /* Mere afstand mellem hvert menupunkt */
+    }
+
+        .navbar-list li a {
+            text-decoration: none; /* Fjern understregning */
+            color: white; /* Ændre farven på linksene */
+            font-size: 16px; /* Ændre tekststørrelse */
+        }
+
+            .navbar-list li a:hover {
+                color: lightgray; /* Ændre farve ved hover */
+            }
