Made the final touches to the searchbar and it should be working fine now, it looks shit but anyway hehe. The login page is fucked cause it takes in the currentUser it should not do that

--- a/src/Css/SearchField.css
+++ b/src/Css/SearchField.css
@@ -1,7 +1,8 @@
 .SearchField {
-	position: relative;
-	width: 300px;
-	margin: 0 auto;
+	position: absolute;
+	width: 200px;
+	margin-top: 5px;
+	margin-left: 800px;
 }
 
 	.SearchField input {
@@ -20,7 +21,7 @@
 	background: #fff;
 	position: absolute;
 	width: 100%;
-	z-index: 1000;
+	z-index: 1;
 }
 
 	.suggestions-list li {
