Trying to fix the bug on the navbar

--- a/src/Css/FrontPage.css
+++ b/src/Css/FrontPage.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:regular,bold,italic&subset=latin,latin-ext');
+
 * {
     margin: 0;
     padding: 0;
@@ -7,9 +8,6 @@
 
 section {
     position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     padding: 80px 100px;
     color: #fff;
 }
@@ -26,16 +24,13 @@ section {
     font-size: 4em;
     margin-bottom: 50px;
     font-family: "Matemasie", sans-serif;
-   
 }
 
 .content {
     position: relative;
     width: 1150px;
-    display: flex;
     justify-content: center;
     align-items: center;
-   
 }
 
     .content .image {
@@ -65,7 +60,6 @@ section {
         border: 1px solid rgba(255, 255, 255, 0.1);
         border-radius: 10px;
         transform: translate(-80px, 50px);
-       
     }
 
         .content .text-box h3 {
@@ -117,15 +111,17 @@ section {
             margin-bottom: 50px;
         }
 
-        .media-info li:nth-child(1), .media-info li:nth-child(5) {
+        .media-info li:nth-child(1),
+        .media-info li:nth-child(5) {
             padding-left: 100px;
         }
 
-        .media-info li:nth-child(2), .media-info li:nth-child(4) {
+        .media-info li:nth-child(2),
+        .media-info li:nth-child(4) {
             padding-left: 50px;
         }
 
-.sec-03{
+.sec-03 {
     margin-bottom: 100px;
 }
 
@@ -138,13 +134,14 @@ body {
     font-family: Calibri, sans-serif;
 }
 
+/* Keep the navbar styles intact */
 .navbar {
-    font-family: Calibri;
-    padding: 15px 0; /* Remove side padding */
+    padding: 15px 0;
     width: 100%;
     border-bottom: 2px solid rgb(255, 255, 255);
     position: relative;
-    background-color: transparent; /* Ensure it has no background color that could affect width */
+    background-color: transparent;
+    display: block; /* Ensure the navbar is block-level */
 }
 
 .navdiv {
@@ -152,9 +149,8 @@ body {
     align-items: center;
     justify-content: space-between;
     width: 100%;
-    max-width: 100%;  /*Ensure it uses the full width */
-    /*padding: 0 40px;*/ /* Add side padding here if needed */
-    margin: 0 auto; /* Center the navbar content */
+    padding: 0 40px;
+    margin: 0 auto;
 }
 
 .logo a {
@@ -202,25 +198,23 @@ button {
         text-align: center;
     }
 
-
 .content-wrapper {
     width: 80%;
     min-height: 50vh;
     margin: auto;
     display: flex;
-    justify-content: space-between; /* Ensure content is spaced out */
+    justify-content: space-between;
     align-items: center;
     color: #fff;
-    margin-bottom: 200px; /* Add more space below the content-wrapper */
+    margin-bottom: 200px;
 }
-
 
 .content-desc {
     display: flex;
-    flex-direction: column; /* Stack the text and button */
-    align-items: flex-start; /* Align text to the left */
+    flex-direction: column;
+    align-items: flex-start;
     max-width: 60%;
-    position: relative; /* Add this to position the button absolutely */
+    position: relative;
 }
 
     .content-desc h1 {
@@ -230,23 +224,31 @@ button {
     }
 
 .get-started-button {
-    position: absolute; /* Position the button absolutely */
-    left: 800px; /* Adjust this value as needed to position the button */
+    position: absolute;
+    left: 800px;
     background-color: #4B0082;
     color: white;
     border-radius: 10px;
-    padding: 15px 35px; /* Reduce padding to ensure text fits on one line */
+    padding: 15px 35px;
     font-size: 25px;
     font-weight: bold;
     border: none;
     cursor: pointer;
     text-decoration: none;
     text-align: center;
-    margin-top: 65px; /* Add space between text and button */
-    white-space: nowrap; /* Prevent text from wrapping */
+    margin-top: 65px;
+    white-space: nowrap;
 }
 
     .get-started-button:hover {
         background-color: #3A006C;
     }
 
+/* Apply display: flex only to the specified sections */
+.sec-01,
+.sec-02,
+.sec-03 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
